@@ -1,6 +1,6 @@
 //Automatically generated file - do not edit
 #define DATE_STR "30.01.2013"
-#define TIME_STR "15:09:18"
-#define SUB_VERS 1595-Mike
-#define SVN_VERS "ersky9x-r152"
+#define TIME_STR "23:18:16"
+#define SUB_VERS 1598-Mike
+#define SVN_VERS "ersky9x-r153"
 #define MOD_VERS "REVB"
